--- a/Views/Login-Register/register.styling.css
+++ b/Views/Login-Register/register.styling.css
@@ -1,5 +1,17 @@
+body {
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+}
+
 #container {
-    background-color: rgb(92, 124, 194);
+    background-image: url("../Assets/back.png");
+    width: calc(100vh * aspect-ratio);
+    min-height: 100vh;
+    margin: 0 auto;
+    background-size: cover;
+    background-position: center;
+    padding: 0.6rem 0;
 }
 
 div.card {
@@ -12,9 +24,15 @@ div.card {
 #house-icon {
     position: absolute;
     top: 0rem;
-    left: 0.2rem;
-    font-size: x-large;
+    left: 0.4rem;
+    font-size: 1.6rem;
     cursor: pointer;
+}
+
+#house-icon:hover {
+    top: -0.10057rem;
+    left: 0.3rem;
+    font-size: 1.8rem;
 }
 
 #register-title {
@@ -43,6 +61,12 @@ input.form-check-input {
 #generate-password-button {
     margin-top: 0.5rem;
     margin-bottom: 1.9rem;
+    font-size: large;
+    background-color: rgb(81,190,230);
+}
+
+#generate-password-button:hover {
+    background-color: rgb(242,132,189);
 }
 
 #register-button {
